# Landlord

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  COPYING  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  configure  configure.ac
binding/: landlord.js  lualandlord.c  lualandlord.h
lua/: llinternal.lua
lualandlord/: advanced_ai.lua  card.lua  deck.lua  game.lua  hand.lua  ll.lua  llinternal.lua  player.lua  standard_ai.lua
src/: .clang-format  Header.h  Makefile  Makefile.am  Makefile.in  advanced_ai.c  advanced_ai.h  card.c  card.h  common.h  deck.c  deck.h  game.c  game.h  hand.c  hand.h  handlist.c  handlist.h  landlord.h  lmath.c  lmath.h  main.c  main.cpp  medalgo.c  medalgo.h  medlandlord.hpp  medlist.c  medlist.h  memtracker.c  memtracker.h  mt19937.c  mt19937.h  player.c  player.h  ruiko_algorithm.c  ruiko_algorithm.h  standard_ai.c  standard_ai.h  temp.c  uncrustify_google_cpp.cfg
